--- a/rpa-certificates-of-free-sale/Logic Workflows/PopulateQueue.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/PopulateQueue.xaml
@@ -8,7 +8,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1240,741</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1767,1191</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>PopulateQueue_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="23">
@@ -38,7 +38,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="22">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="44">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -61,6 +61,8 @@
       <AssemblyReference>UiPath.Mail</AssemblyReference>
       <AssemblyReference>UiPath.CV</AssemblyReference>
       <AssemblyReference>UiPath.Word</AssemblyReference>
+      <AssemblyReference>Microsoft.Bcl.AsyncInterfaces</AssemblyReference>
+      <AssemblyReference>System.Memory</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Flowchart DisplayName="PopulateQueue" sap:VirtualizedContainerService.HintSize="634,636" sap2010:WorkflowViewState.IdRef="Flowchart_1">
@@ -160,7 +162,7 @@
                       <av:PointCollection x:Key="ConnectorLocation">300,263.5 300,303.5</av:PointCollection>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <ui:KillProcess ContinueOnError="{x:Null}" Process="{x:Null}" DisplayName="Kill Process" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="KillProcess_1" ProcessName="WINWORD">
+                  <ui:KillProcess AppliesTo="{x:Null}" ContinueOnError="{x:Null}" Process="{x:Null}" DisplayName="Kill Process" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="KillProcess_1" ProcessName="WINWORD">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -211,13 +213,13 @@
                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                               </scg:Dictionary>
                             </sap:WorkflowViewStateService.ViewState>
-                            <ui:GetOutlookMailMessages Filter="{x:Null}" Account="[IN_dictConfig(&quot;TraderMailbox&quot;)]" DisplayName="Get Emails from Inbox" GetAttachements="False" sap:VirtualizedContainerService.HintSize="412,22" sap2010:WorkflowViewState.IdRef="GetOutlookMailMessages_1" MailFolder="[IN_dictConfig(&quot;RobotInbox&quot;)]" MarkAsRead="False" Messages="[listMailMessages]" OnlyUnreadMessages="True" TimeoutMS="180000" Top="-1" />
-                            <InvokeMethod DisplayName="Invoke Method" sap:VirtualizedContainerService.HintSize="412,134" sap2010:WorkflowViewState.IdRef="InvokeMethod_1" MethodName="Reverse">
+                            <ui:GetOutlookMailMessages Filter="{x:Null}" Account="[IN_dictConfig(&quot;TraderMailbox&quot;)]" DisplayName="Get Emails from Inbox" GetAttachements="False" sap:VirtualizedContainerService.HintSize="434,22" sap2010:WorkflowViewState.IdRef="GetOutlookMailMessages_1" MailFolder="[IN_dictConfig(&quot;RobotInbox&quot;)]" MarkAsRead="False" Messages="[listMailMessages]" OnlyUnreadMessages="True" TimeoutMS="180000" Top="-1" />
+                            <InvokeMethod DisplayName="Invoke Method" sap:VirtualizedContainerService.HintSize="434,134" sap2010:WorkflowViewState.IdRef="InvokeMethod_1" MethodName="Reverse">
                               <InvokeMethod.TargetObject>
                                 <InArgument x:TypeArguments="scg:List(snm:MailMessage)">[listMailMessages]</InArgument>
                               </InvokeMethod.TargetObject>
                             </InvokeMethod>
-                            <ui:ForEach x:TypeArguments="snm:MailMessage" CurrentIndex="{x:Null}" DisplayName="For Each email from Inbox" sap:VirtualizedContainerService.HintSize="412,575" sap2010:WorkflowViewState.IdRef="ForEach`1_3" Values="[listMailMessages]">
+                            <ui:ForEach x:TypeArguments="snm:MailMessage" CurrentIndex="{x:Null}" DisplayName="For Each email from Inbox" sap:VirtualizedContainerService.HintSize="434,565" sap2010:WorkflowViewState.IdRef="ForEach`1_3" Values="[listMailMessages]">
                               <ui:ForEach.Body>
                                 <ActivityAction x:TypeArguments="snm:MailMessage">
                                   <ActivityAction.Argument>
@@ -270,7 +272,7 @@
                                       <av:Size x:Key="ShapeSize">200,66</av:Size>
                                     </scg:Dictionary>
                                   </sap:WorkflowViewStateService.ViewState>
-                                  <Sequence DisplayName="Get In Progress Email" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_6">
+                                  <Sequence DisplayName="Get In Progress Email" sap:VirtualizedContainerService.HintSize="769,1499" sap2010:WorkflowViewState.IdRef="Sequence_6">
                                     <Sequence.Variables>
                                       <Variable x:TypeArguments="scg:List(snm:MailMessage)" Name="listMailInProgress" />
                                     </Sequence.Variables>
@@ -280,21 +282,21 @@
                                       </scg:Dictionary>
                                     </sap:WorkflowViewStateService.ViewState>
                                     <ui:GetOutlookMailMessages Filter="{x:Null}" Account="[IN_dictConfig(&quot;TraderMailbox&quot;)]" DisplayName="Get Email from In Progress" GetAttachements="False" sap:VirtualizedContainerService.HintSize="727,22" sap2010:WorkflowViewState.IdRef="GetOutlookMailMessages_2" MailFolder="[IN_dictConfig(&quot;OutlookInProgress&quot;)]" MarkAsRead="False" Messages="[listMailInProgress]" OnlyUnreadMessages="False" TimeoutMS="180000" Top="-1" />
-                                    <ui:ForEach x:TypeArguments="snm:MailMessage" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="727,1365" sap2010:WorkflowViewState.IdRef="ForEach`1_4" Values="[listMailInProgress]">
+                                    <ui:ForEach x:TypeArguments="snm:MailMessage" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="727,1345" sap2010:WorkflowViewState.IdRef="ForEach`1_4" Values="[listMailInProgress]">
                                       <ui:ForEach.Body>
                                         <ActivityAction x:TypeArguments="snm:MailMessage">
                                           <ActivityAction.Argument>
                                             <DelegateInArgument x:TypeArguments="snm:MailMessage" Name="email" />
                                           </ActivityAction.Argument>
-                                          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="691,1231" sap2010:WorkflowViewState.IdRef="Sequence_8">
+                                          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="691,1221" sap2010:WorkflowViewState.IdRef="Sequence_8">
                                             <sap:WorkflowViewStateService.ViewState>
                                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                               </scg:Dictionary>
                                             </sap:WorkflowViewStateService.ViewState>
-                                            <If Condition="[email.Subject.Equals(strEmailSubject) and OUT_strDateReceived.Equals(email.Headers(&quot;Date&quot;))]" DisplayName="If subject and date match" sap:VirtualizedContainerService.HintSize="649,1139" sap2010:WorkflowViewState.IdRef="If_1">
+                                            <If Condition="[email.Subject.Equals(strEmailSubject) and OUT_strDateReceived.Equals(email.Headers(&quot;Date&quot;))]" DisplayName="If subject and date match" sap:VirtualizedContainerService.HintSize="649,1129" sap2010:WorkflowViewState.IdRef="If_1">
                                               <If.Then>
-                                                <Sequence sap:VirtualizedContainerService.HintSize="504,991" sap2010:WorkflowViewState.IdRef="Sequence_9">
+                                                <Sequence sap:VirtualizedContainerService.HintSize="504,981" sap2010:WorkflowViewState.IdRef="Sequence_9">
                                                   <Sequence.Variables>
                                                     <Variable x:TypeArguments="x:String" Name="strTimeReceived" />
                                                     <Variable x:TypeArguments="scg:IEnumerable(x:String)" Name="listAttachments" />
@@ -320,9 +322,9 @@
                                                       <InArgument x:TypeArguments="x:String">[email.Headers("Date").Split(" "c)(1).Replace(":", "-")]</InArgument>
                                                     </Assign.Value>
                                                   </Assign>
-                                                  <ui:SaveMail DisplayName="Save Mail Message" FilePath="[(OUT_strWorkingFolderPath + (system.Text.RegularExpressions.Regex.Replace(email.Subject, &quot;\?|:|\*|\\|\/|\|&quot;, &quot;.&quot;)) + &quot; &quot; + strTimeReceived + &quot;.eml&quot;)]" sap:VirtualizedContainerService.HintSize="462,87" sap2010:WorkflowViewState.IdRef="SaveMail_1" MailMessage="[email]" />
+                                                  <ui:SaveMail DisplayName="Save Mail Message" FilePath="[(OUT_strWorkingFolderPath + (system.Text.RegularExpressions.Regex.Replace(email.Subject, &quot;\?|:|\*|\\|\/|\|&quot;, &quot;.&quot;)) + &quot; &quot; + strTimeReceived + &quot;.msg&quot;)]" sap:VirtualizedContainerService.HintSize="462,87" sap2010:WorkflowViewState.IdRef="SaveMail_1" MailMessage="[email]" />
                                                   <ui:SaveMailAttachments Attachments="[listAttachments]" DisplayName="Save Attachments" FolderPath="[OUT_strWorkingFolderPath]" sap:VirtualizedContainerService.HintSize="462,87" sap2010:WorkflowViewState.IdRef="SaveMailAttachments_1" Message="[email]" />
-                                                  <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each attachment" sap:VirtualizedContainerService.HintSize="462,383" sap2010:WorkflowViewState.IdRef="ForEach`1_5" Values="[listAttachments]">
+                                                  <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each attachment" sap:VirtualizedContainerService.HintSize="462,373" sap2010:WorkflowViewState.IdRef="ForEach`1_5" Values="[listAttachments]">
                                                     <ui:ForEach.Body>
                                                       <ActivityAction x:TypeArguments="x:String">
                                                         <ActivityAction.Argument>
